fix: reset notif panel left position on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1963,6 +1963,7 @@ tbody tr:hover {
 
   /* Notification panel: adapts on tablet */
   .notif-panel {
+    left: 0;
     width: 100%;
     top: 0;
     bottom: 0;
